--- a/Lab5/src/app/product-list/product-list.component.html
+++ b/Lab5/src/app/product-list/product-list.component.html
@@ -34,6 +34,8 @@
       </a>
     </button>
 
+    <button (click)="deleteProduct(product)">Delete</button>
+
     <app-product-alerts [product]="product" (notify)="onNotify()">
     </app-product-alerts>
   </div>
